# vala-perceptron

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  Untitled-1  configure.ac  copilot-instructions.txt  meson.build
src/: Makefile.am  meson.build  perceptron.vala  verceptron.vala
src/org/esgdev/verceptron/: activation_functions.vala  error_functions.vala  layer_definition.vala  multilayer_perceptron.vala  perceptron.vala  regression_metrics.vala  verceptron.vala
tests/: meson.build
tests/org/esgdev/verceptron/: test_activation_functions.vala  test_error_functions.vala  test_multilayer_perceptron.vala
